[gd_scene load_steps=4 format=2]

[ext_resource path="res://black_background.jpg" type="Texture" id=1]
[ext_resource path="res://StimulantConsumption.tres" type="ButtonGroup" id=2]
[ext_resource path="res://StimulantConsumption.gd" type="Script" id=3]

[node name="StimulantConsumption" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.88782
margin_right = -1.88782
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 312.0
margin_top = 37.5
margin_right = 352.0
margin_bottom = 77.5
rect_min_size = Vector2( 400, 525 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 35.0
margin_top = 60.0
margin_right = 365.0
margin_bottom = 480.0
rect_min_size = Vector2( 330, 420 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question1" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 330.0
margin_bottom = 31.0
text = "Have you consumed any stimulants in the past
24 hours?"

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 35.0
margin_right = 330.0
margin_bottom = 59.0

[node name="CheckBox" type="CheckBox" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 24.0
group = ExtResource( 2 )
text = "Yes"

[node name="CheckBox2" type="CheckBox" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 100.0
margin_bottom = 24.0
group = ExtResource( 2 )
text = "No"

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 63.0
margin_right = 330.0
margin_bottom = 93.0
rect_min_size = Vector2( 0, 30 )

[node name="Question2" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 97.0
margin_right = 330.0
margin_bottom = 145.0
text = "If you answered yes to the previous question,
please expand on which stimulants you have
consumed."

[node name="StimulantResponse" type="TextEdit" parent="NinePatchRect/VBoxContainer"]
margin_top = 149.0
margin_right = 330.0
margin_bottom = 249.0
rect_min_size = Vector2( 320, 100 )

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 253.0
margin_right = 330.0
margin_bottom = 378.0
rect_min_size = Vector2( 0, 125 )

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 382.0
margin_right = 330.0
margin_bottom = 402.0
alignment = 1

[node name="Button" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 120.0
margin_right = 170.0
margin_bottom = 20.0
text = "Finish"

[node name="ExitButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 174.0
margin_right = 209.0
margin_bottom = 20.0
text = "Exit"
[connection signal="toggled" from="NinePatchRect/VBoxContainer/HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="toggled" from="NinePatchRect/VBoxContainer/HBoxContainer/CheckBox2" to="." method="_on_CheckBox2_toggled"]
[connection signal="text_changed" from="NinePatchRect/VBoxContainer/StimulantResponse" to="." method="_on_StimulantResponse_text_changed"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/HBoxContainer2/Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer2/ExitButton" to="." method="_on_ExitButton_pressed"]
